@@ -21,6 +21,12 @@
     <File name="./src/GiverService.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/TrayLib.cs" subtype="Code" buildaction="Compile" />
   </Contents>
+  <References>
+    <ProjectReference type="Gac" localcopy="True" refto="avahi-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=4d116c78973743f5" />
+    <ProjectReference type="Gac" localcopy="True" refto="evolution-sharp, Version=2.0.0.0, Culture=neutral, PublicKeyToken=457eed85bd9370df" />
+    <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="gnome-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+  </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am">
     <BuildFilesVar />
     <DeployFilesVar />
