@@ -1,5 +1,12 @@
 2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* src/GiverService.cs: new service to advertise and transfer files
+	* src/Application.cs: Started Giver Service
+	* src/Makefile.am: Added service to build
+	* giver.mdp: Added Avahi Dependency
+
+2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* src/GiverService.cs, src/Makefile.am, src/TrayLib.cs, giver.mdp,
 	  configure.ac: Added GiverService and TRayLib.cs
 
